--- a/Poengrenn.Web/src/index.html
+++ b/Poengrenn.Web/src/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <object type="image/svg+xml" data="assets/spinner.svg">
+      Laster...
+    </object>
+  </app-root>
 </body>
 </html>
